@@ -489,6 +489,7 @@ exports.del = Method("del");
  * @param ...args   array of invocation arguments
  * @return promise for the return value
  */
+exports.invoke =
 exports.post = Method("post");
 
 /**
